# dotfiles-manager

./: .gitignore  Cargo.toml  README.md  dotfiles.kdl  dotfiles.schema.yaml  dotfiles.wsl-archlinux.kdl  dotfiles.wsl.yaml  dotfiles.yaml  dotfiles_out.yaml  pyproject.toml
crates/casa/: Cargo.toml
crates/casa/src/: env.rs  lib.rs
crates/casa/src/config/: error.rs  kdl_helpers.rs  mod.rs
crates/casa/src/package_manager/: linux_arch.rs  mocked.rs
crates/casa/src/template/: objects.rs
documentation/: cli.md
dots/: Cargo.toml
dots/src/: dir_entry.rs  file_transfer.rs  kdl_helpers.rs  lib.rs  main.rs  package_manager.rs  settings.rs  settings_error.rs  walker.rs  walker_companion.rs
dots/src/config/: bundle.rs  env.rs  error.rs  kdl.rs  kdl_helpers.rs  mod.rs  root.rs
dots/src/package_manager/: linux_arch.rs  mocked.rs  mod.rs
snapshots/: crate_kdl_fail_to_parse_document  dots_config_kdl_error_entry_key_value  dots_config_kdl_error_entry_type
src/dotfiles_manager/: __init__.py  __main__.py
src/dotfiles_manager/package_manager/: homebrew.py  interface.py  pacman.py  winget.py
tests/package_manager/: test_homebrew.py  test_pacman.py  test_winget.py
