[project]
name = "dotfiles-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerson Gallo", email = "ggallovalle@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dotfiles-manager = "dotfiles_manager:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
