[project]
name = "dotfiles-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gerson Gallo", email = "ggallovalle@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "ruamel-yaml>=0.18.15",
    "yamale>=6.0.0",
]

[project.scripts]
dotfiles-manager = "dotfiles_manager:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]
