[package]
name = "casa"
version = "0.1.0"
edition = "2024"
authors = ["Gerson Gallo <ggallovalle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ggallovalle/dotfiles-manager"
description = """
A dotfile manager.
"""

[dependencies]
lazy_static = "1.5.0"

dirs-next = "2.0.0"
which = "8.0.0"
semver = "1.0"

indexmap = "2.11.1"
regex = "1.11.2"
either = "1.15.0"

kdl = "6.3.4"
thiserror = "2.0.16"
ignore = "0.4.23"
globset = "0.4.16"
subst = "0.3.8"
minijinja = "2.12.0"

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
features = ["valuable"]

[dependencies.valuable]
version = "0.1.1"
features = ["derive"]

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[dependencies.clap]
version = "4.0"
features = ["derive"]
optional = true

[dependencies.clap_complete]
version = "4"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]
optional = true

[dependencies.tracing-appender]
version = "0.2.3"
optional = true

[dependencies.scopeguard]
version = "1.2.0"
optional = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["cli"]
cli = ["clap", "clap_complete", "tracing-subscriber", "tracing-appender", "scopeguard"]

[[bin]]
name = "casa"
path = "src/bin/casa.rs"
required-features = ["cli"]
